Autodocs: extract base template into sections by topic/endpoint
[#164698753]

--- a/backends/credhub/src/docs/asciidoc/snippets/authentication.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/authentication.adoc
@@ -1,4 +1,6 @@
 
+== Authentication
+
 === Overview
 
 All requests to CredHub, with the exception of `/info` and `/health`, must include an authentication method.
