--- a/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
+++ b/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
@@ -7,312 +7,52 @@
 
 = CredHub API
 
-== Introduction
-
 include::snippets/introduction.adoc[]
-include::snippets/credhub-conventions.adoc[]
-
-== Authentication
-
-include::snippets/authentication-overview.adoc[]
-
-== Permissions V2 Endpoint
-
-include::snippets/permissions-v2-overview.adoc[]
 
 ---
 
-=== Get a V2 Permission by Actor and Path
-operation::GET__permissions_v2_by_actor_and_path__returns_a_permission[]
+include::snippets/authentication.adoc[]
 
 ---
 
-=== Get a V2 Permission by UUID
-operation::GET__permissions_v2_by_uuid__returns_a_permission[]
+include::snippets/credentials-v1.adoc[]
 
 ---
 
-=== Create a V2 Permission
-operation::POST__permissions_v2__returns_a_permission[]
+include::snippets/certificates-v1.adoc[]
 
 ---
 
-=== Update a V2 Permission
-operation::PUT__permissions_v2__returns_a_permission[]
+include::snippets/permissions-v2.adoc[]
 
 ---
 
-=== Update a V2 Permission Operation
-operation::PATCH__permissions_v2__returns_a_permission[]
+include::snippets/permissions-v1.adoc[]
 
 ---
 
-=== Delete a V2 Permission
-operation::DELETE__permissions_v2_by_uuid__returns_a_permission[]
+include::snippets/regenerate-v1.adoc[]
 
 ---
 
-== Permissions V1 (Deprecated)
-
-=== Get a V1 Permission by Actor and Path
-operation::GET__permissions_v1__returns_permissions[]
+include::snippets/interpolate-v1.adoc[]
 
 ---
 
-=== Create a V1 Permission
-operation::POST__permissions_v1__returns_201[]
+include::snippets/encryption-key-usage-v1.adoc[]
 
 ---
 
-=== Delete a V1 Permission
-operation::DELETE__permission_v1__returns_204[]
+include::snippets/management-v1.adoc[]
 
 ---
 
-== Credentials Endpoint
-
-include::snippets/credentials-overview.adoc[]
+include::snippets/info-v1.adoc[]
 
 ---
 
-=== Find a Credential by Name
-operation::GET__find_by_name__returns_results[]
+include::snippets/version-v1.adoc[]
 
 ---
 
-=== Find a Credential by ID (Type: Value)
-operation::GET__find_by_id__returns_value_results[]
-
----
-
-=== Find a Credential by ID (Type: JSON)
-operation::GET__find_by_id__returns_json_results[]
-
----
-
-=== Find a Credential by ID (Type: Password)
-operation::GET__find_by_id__returns_password_results[]
-
----
-
-=== Find a Credential by ID (Type: User)
-operation::GET__find_by_id__returns_user_results[]
-
----
-
-=== Find a Credential by ID (Type: Certificate)
-operation::GET__find_by_id__returns_certificate_results[]
-
----
-
-=== Find a Credential by ID (Type: RSA)
-operation::GET__find_by_id__returns_rsa_results[]
-
----
-
-=== Find a Credential by ID (Type: SSH)
-operation::GET__find_by_id__returns_ssh_results[]
-
----
-
-=== Find a Credential by Name-Like
-operation::GET__find_by_name_like__returns_results[]
-
----
-
-=== Get a Credential by Name
-operation::GET__get_by_name__returns_results[]
-
----
-
-=== Generate a Certificate Credential
-operation::POST__generate_certificate_returns__certificate_credential[]
-
----
-
-=== Generate a Password Credential
-operation::POST__generate_password_returns__password_credential[]
-
----
-
-=== Generate a User Credential
-operation::POST__generate_user_returns__user_credential[]
-
----
-
-=== Generate a RSA Credential
-operation::POST__generate_rsa_returns__rsa_credential[]
-
----
-
-=== Generate a SSH Credential
-operation::POST__generate_ssh_returns__ssh_credential[]
-
----
-
-=== Set a JSON Credential
-operation::PUT__set_json_credential_returns__json_credential[]
-
----
-
-=== Set a Certificate Credential
-operation::PUT__set_certificate_credential_returns__certificate_credential[]
-
----
-
-=== Set a Password Credential
-operation::PUT__set_password_credential_returns__password_credential[]
-
----
-
-=== Set a RSA Credential
-operation::PUT__set_rsa_credential_returns__rsa_credential[]
-
----
-
-=== Set a SSH Credential
-operation::PUT__set_ssh_credential_returns__ssh_credential[]
-
----
-
-=== Set a User Credential
-operation::PUT__set_user_credential_returns__user_credential[]
-
----
-
-=== Set a Value Credential
-operation::PUT__set_value_credential_returns__value_credential[]
-
----
-
-=== Delete a Credential
-operation::DELETE__credential_returns__void[]
-
----
-
-== Regenerate Credentials Endpoint
-
-include::snippets/regenerate-credentials-overview.adoc[]
-
----
-
-=== Regenerate a Credential
-operation::POST__regenerate__returns_results[]
-
----
-
-=== Bulk Regenerate Credentials
-operation::POST__bulkregenerate__returns_results[]
-
----
-
-== Certificates Endpoint
-
-include::snippets/certificate-rotation-instructions.adoc[]
-
----
-
-=== Get All Certificates
-operation::GET__certificates__returns_certificates[]
-
----
-
-=== Get a Certificate By Name
-operation::GET__certificates_byName__returns_certificate[]
-
----
-
-=== Regenerate a Certificate
-operation::POST__certificates_uuid_regenerate__returns_certificate[]
-
----
-
-=== Update Transitional Version
-operation::PUT__updateTransitionalVersion__returns_certificate[]
-
----
-
-=== Get All Versions of a Certificate
-operation::GET__certificateVersions__returns_certificates[]
-
----
-
-=== Create a Version of a Certificate
-operation::POST__certificateVersions__returns_certificate[]
-
----
-
-=== Delete a Version of a Certificate
-operation::DELETE__certificateVersion__returns_certificate[]
-
----
-
-== Interpolation Endpoint
-
-
-=== Interpolate a JSON Object
-
-This endpoint receives a VCAP_SERVICES object containing CredHub references and responds with the object containing the credential values interpolated.
-
-NOTE: At this time, only credential references at `credentials.credhub-ref` will be interpolated.
-The key `credhub-ref` will be removed and the referenced credential object will be set as the value of credentials.
-
-operation::POST__interpolate__returns_map[]
-
----
-
-== Encryption Key Usage Endpoint
-
-include::snippets/encryption-key-usage-overview.adoc[]
-
----
-
-=== Get Encryption Key Usage
-operation::GET__keyusage__returns_map[]
-
----
-
-== Management Endpoint
-
-include::snippets/management-overview.adoc[]
-
----
-
-=== Get Read Only Mode Status
-operation::GET__management_mode__returns_result[]
-
----
-
-=== Set Read Only Mode Status
-operation::POST__management_mode__returns_result[]
-
----
-
-== Info Endpoint
-
-=== Get Info
-operation::GET__info__returns_info[]
-
----
-
-== Version Endpoint
-
-This request displays the server version.
-
----
-
-=== Get Version
-operation::GET__version__returns_version[]
-
----
-
-== Health Endpoint
-
-This request verifies that communication with the server via the API is possible.
-
----
-
-=== Get Server Status
-operation::GET__health__returns_status[]
-
----
+include::snippets/health-v1.adoc[]
