Update docs to use "name" and "path" consistently
[#166290453]

Signed-off-by: Mark DeLillo <mdelillo@pivotal.io>

--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -17,8 +17,8 @@ If you mistakenly set the type, you must delete the credential, then set it with
 
 ---
 
-=== Find a Credential by Name
-operation::GET__find_by_name__returns_results[]
+=== Find a Credential by Path
+operation::GET__find_by_path__returns_results[]
 
 ---
 
