--- a/backends/credhub/src/docs/asciidoc/snippets/introduction.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/introduction.adoc
@@ -25,6 +25,8 @@ The character limit includes the leading slash, which will be prepended automati
 
 Paths can be used to namespace a set of credential names for a different deployment or environment. To add a path to a credential, simply add the path prior to the credential name, separated by a forward slash (/), e.g. `credhub set -t password -n /prod/deploy123/cc_password -v 'value'`. If a leading slash is not provided, it will be automatically prepended.
 
+In this example, path refers to `/prod/deploy123/` and name refers to either `cc_password` or `/prod/deploy123/cc_password`.
+
 === Credential IDs
 
 Credential responses include a unique identifier in the key 'id'. This ID is a unique identifier for a specific credential version. When a credential value is updated, a new ID will be returned. This identifier can be useful in applications where a specific credential value should be pinned until a manual action (such as a deployment) is performed. If your application should receive the latest value of the credential, retrieving by name is preferred.
