--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -15,6 +15,8 @@ Credentials are typed based on the format of the stored value, value validation 
 Once a credential type has been set, it cannot be updated to a new type.
 If you mistakenly set the type, you must delete the credential, then set it with the correct type.
 
+When viewing all versions of a credential, the versions will be returned in descending order of their creation date.
+
 ---
 
 === Find a Credential by Path
