--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -20,6 +20,8 @@ When viewing all versions of a credential, the versions will be returned in desc
 ---
 
 === Find a Credential by Path
+Returns an array of versions, sorted in order from newest to oldest.
+
 operation::GET__find_by_path__returns_results[]
 
 ---
@@ -60,6 +62,8 @@ operation::GET__find_by_id__returns_ssh_results[]
 ---
 
 === Find a Credential by Name-Like
+Returns an array of versions, sorted in order from newest to oldest.
+
 operation::GET__find_by_name_like__returns_results[]
 
 ---
