Add note to api docs about single transitional versions
[#168458478]

Co-authored-by: Tom Kennedy <tkennedy@pivotal.io>
Co-authored-by: Kashyap Vedurmudi <kvedurmudi@pivotal.io>

--- a/backends/credhub/src/docs/asciidoc/snippets/certificates-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/certificates-v1.adoc
@@ -24,6 +24,8 @@ Note: The certificate versions will be sorted in descending order of their creat
 === Regenerate a Certificate
 operation::POST__certificates_uuid_regenerate__returns_certificate[]
 
+Note: If a certificate credential only has one version and it is marked as transitional the credential cannot be regenerated using this endpoint.
+
 ---
 
 === Update Transitional Version
