--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -24,6 +24,8 @@ Returns an array of versions, sorted in order from newest to oldest.
 
 operation::GET__find_by_path__returns_results[]
 
+Note: If a certificate credential only has one version and it is marked as transitional the credential name will not be returned by this endpoint.
+
 ---
 
 === Find a Credential by ID (Type: Value)
