Add note to api docs about single transitional versions
[#168458478]

Co-authored-by: Tom Kennedy <tkennedy@pivotal.io>
Co-authored-by: Kashyap Vedurmudi <kvedurmudi@pivotal.io>

--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -22,6 +22,8 @@ When viewing all versions of a credential, the versions will be returned in desc
 === Find a Credential by Path
 operation::GET__find_by_path__returns_results[]
 
+Note: If a certificate credential only has one version and it is marked as transitional the credential name will not be returned by this endpoint.
+
 ---
 
 === Find a Credential by ID (Type: Value)
