Update 'Find a Credential by Name' docs a la f308ddb84671.
Wonder if anyone will call me out for this commit? :)

[#168458478]

--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -64,6 +64,8 @@ operation::GET__find_by_id__returns_ssh_results[]
 === Find a Credential by Name-Like
 operation::GET__find_by_name_like__returns_results[]
 
+Note: If a certificate credential only has one version and it is marked as transitional the credential name will not be returned by this endpoint.
+
 ---
 
 === Get a Credential by Name
