Fixed flag in 'set' example [#171108011]
Signed-off-by: Tyler Phelan <tphelan@pivotal.io>

--- a/backends/credhub/src/docs/asciidoc/snippets/introduction.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/introduction.adoc
@@ -23,7 +23,7 @@ Credentials can be named with any value up to 255 characters containing:
 
 The character limit includes the leading slash, which will be prepended automatically if absent.
 
-Paths can be used to namespace a set of credential names for a different deployment or environment. To add a path to a credential, simply add the path prior to the credential name, separated by a forward slash (/), e.g. `credhub set -t password -n /prod/deploy123/cc_password -v 'value'`. If a leading slash is not provided, it will be automatically prepended.
+Paths can be used to namespace a set of credential names for a different deployment or environment. To add a path to a credential, simply add the path prior to the credential name, separated by a forward slash (/), e.g. `credhub set -t password -n /prod/deploy123/cc_password -w 'myPassword'`. If a leading slash is not provided, it will be automatically prepended.
 
 In this example, path refers to `/prod/deploy123/` and name refers to either `cc_password` or `/prod/deploy123/cc_password`.
 
