Add info about credential max size [#172950318]

--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -5,7 +5,7 @@
 
 Credentials are the primary object in CredHub.
 Any passwords, secrets, configurations or other sensitive information that you store is saved to a named credential.
-You can retrieve, update and delete a credential using its name.
+You can retrieve, update and delete a credential using its name. Each credential has a maximum size of 64 KB.
 
 All credentials, regardless of type, share a common namespace, e.g. a credential named `/diego-tls` exists once in CredHub.
 Credential names are not reservable, so two users updating a credential of the same name will result in updates to the same credential.
