Update generate cert documentation with minimum duration details
Authored-by: Preethi Varambally <pvarambally@pivotal.io>
Authored-by: Brian Upton <bupton@vmware.com>
Authored-by: Pablo Rodas <prodas@vmware.com>

--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -78,6 +78,8 @@ operation::GET__get_by_name__returns_results[]
 === Generate a Certificate Credential
 operation::POST__generate_certificate_returns__certificate_credential[]
 
+Note: If the duration is overridden by the minimum duration, the response will contain the duration_overridden flag set to true.
+
 ---
 
 === Generate a Password Credential
