Update docs to include logic change for converge
Authored-by: Brian Upton <bupton@vmware.com>
Authored-by: Preethi Varambally <pvarambally@pivotal.io>

--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -78,7 +78,10 @@ operation::GET__get_by_name__returns_results[]
 === Generate a Certificate Credential
 operation::POST__generate_certificate_returns__certificate_credential[]
 
-Note: If the duration is overridden by the minimum duration, the response will contain the duration_overridden flag set to true.
+Notes: 
+
+* If the duration is overridden by the minimum duration, the response will contain the duration_overridden flag set to true.
+* When the mode is set to converge, certificates are no longer regenerated if the duration doesn't match the existing certificate's duration.
 
 ---
 
