Make duration overridden non-nullable
Removes the null case from all usages of the new durationOverridden
field. Because the existing CertificateView is used for all
certificate-related endpoints (including GET, DELETE, etc), a new view
class had to be introduced to prevent the duration overridden field from
showing up on inappropriate endpoints.

The new CertificateGenerationView inherits from the original
CertificateView and only adds fields that are specific to the generate
and regenerate endpoints.

Co-authored-by: Brian Upton <bupton@vmware.com>
Co-authored-by: Pablo Rodas <prodas@vmware.com>
Co-authored-by: Preethi Varambally <pvarambally@pivotal.io>

--- a/backends/credhub/src/docs/asciidoc/snippets/certificates-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/certificates-v1.adoc
@@ -11,7 +11,7 @@ See https://github.com/pivotal-cf/credhub-release/blob/master/docs/ca-rotation.m
 
 A minimum duration can be configured for leaf and CA certificates using the `certificates.leaf_minimum_duration_in_days` and `certificates.ca_minimum_duration_in_days` server-level configuration fields. When these fields are configured, if a request to generate or regenerate a certificate has a duration lower than the minimum, then the minimum duration is used instead.
 
-When this feature is configured, the API response will include a `duration_overridden` field that is `true` when the minimum duration was used instead, or `false` if the requested duration was used. When the feature is not configured, this field is not present.
+The API response will include a `duration_overridden` field that is `true` when the minimum duration was used instead, or `false` if the requested duration was used.
 
 ---
 
