--- a/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/credentials-v1.adoc
@@ -80,7 +80,7 @@ operation::POST__generate_certificate_returns__certificate_credential[]
 
 Notes: 
 
-* If the duration is overridden by the minimum duration, the response will contain the `duration_overridden` flag set to true.
+* If the duration is overridden by the minimum duration, the response will contain the `duration_overridden` flag set to true. It will also include the actual duration used to generate the certificate in the `duration_used` field.
 * When the mode is set to converge, certificates are no longer regenerated if the duration doesn't match the existing certificate's duration.
 
 ---
