In asciidocs the name of snippets now agree with the test names

--- a/backends/credhub/src/docs/asciidoc/snippets/encryption-key-usage-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/encryption-key-usage-v1.adoc
@@ -9,4 +9,4 @@ After initiating an encryption key rotation, you may validate the status of the 
 ---
 
 === Get Encryption Key Usage
-operation::GET__keyusage__returns_map[]
+operation::getKeyusageReturnsMap[]
