--- a/backends/credhub/src/docs/asciidoc/snippets/health-v1.adoc
+++ b/backends/credhub/src/docs/asciidoc/snippets/health-v1.adoc
@@ -8,4 +8,4 @@ This endpoint verifies that communication with the server via the API is possibl
 ---
 
 === Get Server Status
-operation::GET__health__returns_status[]
+operation::getHealthReturnsStatus[]
